--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,13 @@ button:hover {
 
 body {
     background-image: url('aclcbgmainpic.jpg');
+    height: 100vh;
+    width: auto;
+    ackground-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    text-align: justify;
 }
 
 .mainbg {
