--- a/styles-home.css
+++ b/styles-home.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 
 body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: rgb(159, 109, 92);
+    background-image: url('mainpagebg.jpg');
+    background-repeat: round;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 li, a {
@@ -38,7 +43,7 @@ header {
 }
 
 .nav_links li a:hover {
-    color: rgb(77, 226, 43);
+    color: rgb(58, 177, 58);
 }
 
 .headerwrapper {
@@ -52,26 +57,37 @@ header {
     justify-content:left;
     align-items: center;
     justify-content: space-between;
-    background-color: aquamarine;
-    padding: 3% 2% 2% 4%;
+    background-color: rgb(255, 255, 255, 0.6);
+    padding: 2% 2% 2% 4%;
 }
 
 .threemainchoices h1 {
-    display: block;
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 600;
+    font-size: 48px;
+    color: #000000;
+    text-decoration: none;
+    width: 30%;
 }
 
 .choiceone {
     display: block;
-    background-color: red;
+    background-color: rgb(244, 244, 244);
     width: 20%;
     height: 60vh;
     box-shadow: 5px 5px #888888;
     border-radius: 12px;
 }
 
+.letter-spacings {
+    width: 40%;
+    padding-left: 30%;
+}
+
 .choicetwo {
     display: block;
-    background-color: yellow;
+    background-color: rgb(244, 244, 244);
     width: 20%;
     height: 60vh;
     box-shadow: 5px 5px #888888;
@@ -80,7 +96,7 @@ header {
 
 .choicethree {
     display: block;
-    background-color: green;
+    background-color: rgb(244, 244, 244);
     width: 20%;
     height: 60vh;
     box-shadow: 5px 5px #888888;
@@ -103,6 +119,7 @@ header {
     font-size: 34px;
     color: #000000;
     text-decoration: none;
+    position: relative;
 }
 .choiceone:hover, .choicetwo:hover, .choicethree:hover {
     background-color: aliceblue;
@@ -112,4 +129,198 @@ header {
 .studylogoicon {    
     width: 100%;
     height: auto;
+}
+
+.sectionfirst {
+    width: 100%;
+    justify-items: center;
+    background-color: white;
+    height: 400px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.sectioncentered {
+    display: inline-block;
+    margin: 0 auto;
+    padding: 3px;
+    width: 80%;
+}
+.sectionone {
+    background-color: white;
+}
+
+.headmaintitles {
+    background-color: rgb(255, 255, 255, 0);
+    font-family: 'Lobster', cursive;
+    font-weight: 600;
+    font-style: bold;
+    font-size: 36px;
+    color: #000000;
+    text-decoration: none;
+    margin: 0;
+    padding: 3% 5% 1% 5%;
+}
+
+footer{
+    position: inline-block;
+    bottom: 0;
+}
+
+.footer-distributed{
+    background-color: #f6f7fb;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+    
+    padding: 55px 50px;
+    margin-top: 0px;
+}
+
+.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right{
+ display: inline-block;
+ vertical-align: top;
+}
+
+.footer-distributed .footer-left{
+    width: 40%;
+}
+    
+.footer-distributed h3{
+    color:  #000000;
+    font: normal 36px 'Bebas Neue', cursive;
+    margin: 0;
+}
+    
+.footer-distributed h3 span{
+    color:  #000000;
+}
+     
+.footer-distributed .footer-links{
+    color:  #000000;
+    margin: 20px 0 12px;
+    padding: 0;
+}
+    
+.footer-distributed .footer-links a{
+    display:inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color:  inherit;
+}
+    
+.footer-distributed .footer-company-name{
+    color:  #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+    
+    
+.footer-distributed .footer-center{
+    width: 35%;
+}
+    
+.footer-distributed .footer-center i{
+    background-color: rgb(255, 255, 255, 0);
+    color: #000000;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+}
+    
+.footer-distributed .footer-center i.fa-envelope{
+    font-size: 17px;
+    line-height: 38px;
+}
+    
+.footer-distributed .footer-center p{
+    display: inline-block;
+    color: #000000;
+    vertical-align: middle;
+    margin:0;
+}
+    
+.footer-distributed .footer-center p span{
+    display:block;
+    font-weight: normal;
+    font-size:14px;
+    line-height:2;
+}
+    
+.footer-distributed .footer-center p a{
+    color:  #5383d3;
+    text-decoration: none;;
+}
+    
+.footer-distributed .footer-right{
+    width: 20%;
+}
+    
+.footer-distributed .footer-company-about{
+    line-height: 20px;
+    color:  #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+}
+    
+.footer-distributed .footer-company-about span{
+    display: block;
+    color:  #000000;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+    
+.footer-distributed .footer-icons{
+    margin-top: 25px;
+}
+    
+.footer-distributed .footer-icons a{
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color:  rgb(255,255, 255, 0);
+    border-radius: 2px;
+    
+    font-size: 20px;
+    color: #000000;
+    text-align: center;
+    line-height: 35px;
+    
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 880px) {
+ 
+.footer-distributed{
+    font: bold 14px sans-serif;
+}
+    
+.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right{
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+}
+    
+.footer-distributed .footer-center i{
+    margin-left: 0;
+}
+
+.main {
+    line-height: normal;
+    font-size: auto;
+}   
 }
